UI fixes, standardize oragnic and kosher labels, reduce side of clear filters button on mobile

--- a/front-end/src/components/Sauces.css
+++ b/front-end/src/components/Sauces.css
@@ -84,7 +84,7 @@ body.light .sauce-controls {
   .sauce-search {
     width: 160px;
   }
-  .surprise-button {
+  .surprise-button, .clear-button {
     padding: 8px 10px;
     font-size: 14px;
   }
